add file vsCode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#510E52",
-        "titleBar.activeBackground": "#711473",
-        "titleBar.activeForeground": "#FEFBFE"
+        "activityBar.background": "#043614",
+        "titleBar.activeBackground": "#064B1B",
+        "titleBar.activeForeground": "#EFFEF4"
     }
 }
